      don't depend on libc.  Patch from Niko Tyni.  (Closes: #461350)
    + [RA] Remove check for libc5 binaries.  libc5 is long-gone.
    + [RA] Remove various dead tag descriptions we no longer issue.
    + [RA] Warn on packages that provide Perl modules but don't depend on
      perlapi-*.  Thanks, Niko Tyni.  (Closes: #463142)
  * checks/changelog-file:
    + [RA] Decode the changelog entry from UTF-8 before doing length
      checks.  Thanks, Cyril Brulebois.  (Closes: #461822)
    + [RA] Check for mismatches between the latest changelog and
      NEWS.Debian entries if they're for the same package version.
      Thanks, Cyril Brulebois.  (Closes: #461823)
  * checks/common_data.pm:
    + [RA] Add Bugs, Origin, and Breaks to known binary and udeb fields
      and Bugs to known source fields, matching current dpkg.  Thanks,
      Raphaël Hertzog.  (Closes: #459787)
  * checks/debhelper:
    + [RA] CDBS now defaults to a debhelper compatibility level of V5.
    + [FL] Update list of debhelper commands that modify maintainer
       scripts. Add dh_icons, dh_installudev, dh_pysupport, dh_pycentral
       and rename dh_installtexfonts to dh_installtex.
    + [RA] Add checks for versioned debhelper dependencies for dh_icons
      and dh_installifupdown.  Thanks, Evgeni Golov.  (Closes: #463028)
  * checks/fields{.desc,}:
    + [RA] The CDBS ant rules are in class, not rules.  Thanks, Cyril
      Brulebois.  (Closes: #460168)
    + [RA] Versioned Python dependencies satisfy a Python debian/rules
      requirement.  Add a separate tag for Python build dependencies to
      explain the dependency possibilities.  Ignore dh_python if
      debian/pyversion or a Python-Version control field are present.
      Thanks, Loïc Minier.  (Closes: #460625)
    + [RA] Check that -dbg packages depend on their base package.  Patch
      from Chris Lamb.  (Closes: #458785)
    + [RA] Check the value of Dm-Upload-Allowed.
  * checks/files{.desc,}: