@@ -226,6 +226,13 @@ while (<IN>) {
 	$has_perl_lib = 1;
     }
 
+    # Something other than detached debugging symbols in /usr/lib/debug paths.
+    if ($file =~ m,/usr/lib/debug/(lib\d*|s?bin|usr|opt|dev|emul)/,) {
+	if (exists($NEEDED{$file})) {
+	    tag "debug-file-should-use-detached-symbols", $file;
+	}
+    }
+
     # statically linked?
     my @needed;
     if (!exists($NEEDED{$file}) && !defined($NEEDED{$file})) {
@@ -289,6 +296,7 @@ if ($needs_depends_line) {
         my $re = qr/(?:^|,)\s*\Q$needs_libc\E\b/o;
         if ($depends !~ /$re/) {
             my $others = '';
+	    $needs_libc_count--;
             if ($needs_libc_count > 0) {
                 $others = " and $needs_libc_count others";
             }
