@@ -164,3 +164,19 @@ Info: This package includes a *.so file in <tt>/usr/lib/perl5</tt>,
  missing dh_perl call in <tt>debian/rules</tt> or a missing
  ${perl:Depends} substitution variable in the Depends line in
  <tt>debian/control</tt>.
+
+Tag: debug-file-should-use-detached-symbols
+Type: warning
+Info: This file is in a location generally used for detached debugging
+ symbols, but it appears to contain a complete copy of the executable or
+ library instead of only the debugging symbols.  Files in subdirectories
+ of <tt>/usr/lib/debug</tt> mirroring the main file system should contain
+ only debugging information generated by <tt>objcopy
+ --only-keep-debug</tt>.  Binaries or shared objects built with extra
+ debugging should be installed directly in <tt>/usr/lib/debug</tt> or in
+ subdirectories corresponding to the package, not in the directories that
+ mirror the main file system.
+ .
+ If you are using dh_strip with the --dbg-package flag, don't also install
+ the library in <tt>/usr/lib/debug</tt>.  dh_strip does all the work for
+ you.
